--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@ionic-native/camera": "^5.33.1",
+    "@ionic-native/file": "^5.33.1",
+    "@ionic-native/file-path": "^5.33.1",
+    "@ionic-native/ionic-webview": "^5.33.1",
+    "@ionic-native/splash-screen": "^5.33.1",
+    "@ionic-native/status-bar": "^5.33.1",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "2.0.0",
     "firebase": "^8.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -44,12 +51,15 @@
     "@typescript-eslint/parser": "4.16.1",
     "cordova-android": "^9.1.0",
     "cordova-ios": "^6.2.0",
+    "cordova-plugin-camera": "^5.0.2",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^6.0.0",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -74,7 +84,10 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "ios",
