--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@capacitor/camera": "^1.0.0",
+    "@capacitor/cli": "^3.0.0",
+    "@capacitor/core": "^3.0.0",
+    "@capacitor/filesystem": "^1.0.0",
+    "@capacitor/storage": "^1.0.0",
     "@ionic-native/camera": "^5.33.1",
     "@ionic-native/file": "^5.33.1",
     "@ionic-native/file-path": "^5.33.1",
